# IFEM

./: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.in  HOWTO  README.md
Apps/: CMakeLists.txt  Makefile  SIMLinEl2D.C  SIMLinEl2D.h  SIMLinEl3D.C  SIMLinEl3D.h  main_LinEl3D.C  main_LinElStep.C  run.sh
Apps/Common/: AppCommon.C  AppCommon.h  BDF.C  BDF.h  CFDenums.h  CMakeLists.txt  CompatibleOperators.C  CompatibleOperators.h  EqualOrderOperators.C  EqualOrderOperators.h  ISolver.h  MeshUtils.C  MeshUtils.h  MultiPatchModelGenerator.C  MultiPatchModelGenerator.h  PiolaOperators.C  PiolaOperators.h  ResidualOperators.C  ResidualOperators.h  SAWallLaw.C  SAWallLaw.h  SIMCoupled.h  SIMCoupledSI.h  SIMCoupledSemiImplicit.h  SIMExplicitLMM.h  SIMExplicitRK.h  SIMExplicitRKE.h  SIMImplicitLMM.h  SIMKCyclePC.h  SIMMultiPatchModelGen.C  SIMMultiPatchModelGen.h  SIMMxV.h  SIMNodalConstraint.C  SIMNodalConstraint.h  SIMOverride.h  SIMSemi3D.h  SIMSolver.h  SIMSolverAdap.h  SIMSolverKRef.h  SIMSolverTS.h  (+9 more)
Apps/Common/Test/: TestCompatibleOperators.C  TestEqualOrderOperators.C  TestMeshUtils.C  TestMultiPatchModelGenerator.C  TestSAWallLaw.C  TestSIMCoupled.C  TestSIMNodalConstraint.C  TestSIMOverride.C  TestSpalding.C  TestStabilizationUtils.C  TestTimeIntUtils.C  TestWeakOperators.C
Apps/Common/Test/LR/: TestMultiPatchLRRefine.C  TestSIMNodalConstraint.C
Apps/Common/Test/MPI/: TestMultiPatchModelGenerator.C
Apps/Common/Test/refdata/: modelgen2d_subdivision.xinp  modelgen2d_subdivision_eqs1.ref  modelgen2d_subdivision_eqs2.ref  modelgen2d_subdivision_eqs3.ref  modelgen2d_subdivision_mixed.xinp  modelgen2d_subdivision_nodes1.ref  modelgen2d_subdivision_nodes2.ref  modelgen2d_subdivision_nodes3.ref  modelgen2d_subdivision_periodic.xinp  modelgen3d_subdivision.xinp  modelgen3d_subdivision_mixed.xinp  nodal_1D_V1.xinp  nodal_2D_E2_mixed.xinp  nodal_2D_E3_mixed.xinp  nodal_2D_V3.xinp  nodal_2D_V4.xinp  nodal_3D_E11.xinp  nodal_3D_E2.xinp  nodal_3D_E3.xinp  nodal_3D_E3_mixed.xinp  nodal_3D_E4.xinp  nodal_3D_E7.xinp  nodal_3D_F4.xinp  nodal_3D_F6.xinp  nodal_3D_V1.xinp  nodal_3D_V4.xinp  nodal_3D_V6.xinp  nodal_3D_V7.xinp  (+1 more)
Apps/Common/cmake/: CheckCommits.cmake  CheckCommits.cmake.in
Apps/Common/scripts/: check-patchseries.sh.in  clang-check-test.sh  cppcheck-test.sh.in  doregtests.sh.in  iotest.sh  iotest.sh.in  regtest.sh  regtest.sh.in
Apps/FiniteDefElasticity/: CMakeLists.txt  Doxyfile  LinearMaterial.C  LinearMaterial.h  Makefile  MortarContact.C  MortarContact.h  NLoptions.C  NLoptions.h  NeoHookeElasticity.C  NeoHookeElasticity.C.depreciated  NeoHookeElasticity.h  NeoHookeElasticity.h.depreciated  NeoHookeMaterial.C  NeoHookeMaterial.h  NonlinearDriver.C  NonlinearDriver.h  NonlinearElasticity.C  NonlinearElasticity.h  NonlinearElasticityFbar.C  NonlinearElasticityFbar.h  NonlinearElasticityTL.C  NonlinearElasticityTL.h  NonlinearElasticityUL.C  NonlinearElasticityUL.h  NonlinearElasticityULMX.C  NonlinearElasticityULMX.h  NonlinearElasticityULMixed.C  NonlinearElasticityULMixed.h  PlasticMaterial.C  PlasticMaterial.h  PlasticityUL.C  PlasticityUL.h  RigidBody.C  RigidBody.h  SIMContact.C  SIMContact.h  SIMFiniteDefEl.C  SIMFiniteDefEl.h  accKM.f  (+4 more)
Apps/FiniteDefElasticity/Material/: Hcurve.h  Makefile  amat3d.f  cons2d.f  cons3d.f  const.h  eigs3d.f  ieps3d.f  invert.f  liel3d.f  mdma3d.f  monh3d.f  pcst3d.f  plas2d.f  plas3d.f  push3d.f  rprin0.f  stnh3d.f  vfnh3d.f  wder3d.f  wlog3d.f
Apps/FiniteDefElasticity/Test/: CanTS-p1.inp  CanTS-p1.reg  CanTS-p2.inp  CanTS-p2.reg  CanTS-p3.inp  CanTS-p3.reg  Contact2D_Q1P0_cyl_AL.reg  Contact2D_Q1P0_cyl_AL.xinp  Contact2D_Q1P0_cyl_PL.reg  Contact2D_Q1P0_cyl_PL.xinp  Contact2D_Q1P0_plane_PL.reg  Contact2D_Q1P0_plane_PL.xinp  Contact3D_Q1P0_cyl_AL.reg  Contact3D_Q1P0_cyl_AL.xinp  Contact3D_Q1P0_cyl_PL.reg  Contact3D_Q1P0_cyl_PL.xinp  Contact3D_Q1P0_plane_PL.reg  Contact3D_Q1P0_plane_PL.xinp  Contact3D_Q1P0_sphere_PL.reg  Contact3D_Q1P0_sphere_PL.xinp  Cook2D-h1-p2.inp  Cook2D-h1-p2.reg  Cook2D-p1-h1.inp  Cook2D-p1-h1.reg  Cook2D-p2-h1.inp  Cook2D-p2-h1.reg  Cyl-p2.inp  Cyl-p2.reg  Cyl-p3.inp  Cyl-p3.reg  Cyl-p4.inp  Cyl-p4.reg  FBlock-h8x2-Q4P3.reg  FBlock-h8x2-Q4Q3.inp  FBlock-h8x2-Q4Q3.reg  FBlock-h8x2-p4.inp  FBlock-h8x3-Q3P2.inp  FBlock-h8x3-Q3P2.reg  FBlock-h8x3-Q3Q2.reg  FBlock-h8x3-Q3Q2.xinp  (+25 more)
Apps/FiniteDefElasticity/doc/: FiniteDefElasticity.dox
Apps/HDF5toVTF/: HDF5toVTF.C
Apps/HDF5toVTx/: CMakeLists.txt  HDF5toVTx.C  VTU.C  VTU.h
Apps/LinearElasticity/: SIMLinEl2D.C  SIMLinEl2D.h  SIMLinEl3D.C  SIMLinEl3D.h  SIMLinElBeamC1.C  SIMLinElBeamC1.h  SIMLinElKL.C  SIMLinElKL.h  main_LinEl3D.C  main_LinElStep.C
Apps/LinearElasticity/Test/: Annulus2D.reg  Annulus2D.xinp  Annulus3D.reg  Annulus3D.xinp  Cylinder-Axisymm.inp  Cylinder-Axisymm.reg  Cylinder-Lagrange.reg  Cylinder-Lagrange.reg.disabled  Cylinder-NURBS.reg  Cylinder-Spectral.inp  Cylinder-Spectral.reg  Cylinder-p4.inp  Hole2D-Lagrange.reg  Hole2D-NURBS.reg  Hole2D-NURBS.xinp  Hole2D-Spectral.inp  Hole2D-Spectral.reg  Hole2D-new.xinp  Hole2D-p3.inp  Lshape-1x1-p1.g2  Lshape-adap-p2.xinp  NavierPart_p2.inp  NavierPart_p2.reg  NavierPart_p3.inp  NavierPart_p3.reg  NavierPoint_p3.inp  NavierPoint_p3.reg  NavierPress_p2.inp  NavierPress_p2.reg  NavierPress_p3.inp  NavierPress_p3.reg  PipeJoint-Lagrange.reg  PipeJoint-Lagrange.xinp  PipeJoint-NURBS.reg  PipeJoint-vibration.inp  PipeJoint-vibration.reg  PipeJoint-vibration.reg.disabled  PipeJoint-vibration.xinp  PipeJoint.inp  SquarePlate-Lagrange.reg  (+19 more)
Apps/Utils/: CMakeLists.txt  CompatibleOperators.C  EqualOrderOperators.C  EqualOrderOperators.h  MeshUtils.C  MultiPatchModelGenerator.h  PiolaOperators.h  SIMCoupledSI.h  SIMExplicitLMM.h  SIMExplicitRK.h  SIMExplicitRKE.h  SIMMultiPatchModelGen.C  SIMNodalConstraint.C  SIMSemi3D.C  SIMSemi3D.h  SIMSolver.h  StabilizationUtils.C  TimeIntUtils.C  TimeIntUtils.h
Apps/Utils/Test/: TestCompatibleOperators.C  TestEqualOrderOperators.C  TestMeshUtils.C  TestMultiPatchModelGenerator.C  TestStabilizationUtils.C  TestTimeIntUtils.C
Apps/Utils/scripts/: iotest.sh  regtest.sh
(+5035 files in other folders)
